# dm-Rat

./: .gitignore  README.md
.cargo/: config.toml
design-tools/: README.md
ds1/: Cargo.toml
lv2/: Cargo.toml
lv2/dm-Rat.lv2/: dm-Rat_dsp.ttl  manifest.ttl  modgui.ttl
lv2/dm-Rat.lv2/modgui/: stylesheet-dm-rat.css
lv2/dm-Repeat.lv2/: dm-Repeat.ttl  dm-Repeat_dsp.ttl  manifest.ttl  modgui.ttl
lv2/docker/modduo/: Dockerfile
lv2/docker/moddwarf/: Dockerfile
lv2/src/: lib.rs
nih-plug/: Cargo.toml
nih-plug/src/: ds1_parameters.rs  editor.rs  lib.rs  rat_parameters.rs
nih-plug/src/editor/: style.css  ui_data.rs
nih-plug/src/editor/components/: param_knob.rs
nih-plug/src/repeat_parameters/: custom_formatters.rs
profiling/: Cargo.toml
rat/: Cargo.toml
repeat/: Cargo.toml
scripts/: build-lv2-for-mod-desktop-mac.sh  build-lv2.sh  build-vst-for-mac-m1.sh  build-vst-for-mac.sh  build-vst3-for-mac.sh
sketches/: README.md  fir.py
vst/: Cargo.toml
vst/dm-Repeat.vst/Contents/: Info.plist
vst/dm-Repeat.vst/Contents/MacOS/: dm-Repeat
vst/src/: bin.rs  editor.rs  lib.rs  repeat_parameters.rs
vst/src/editor/: style.css  ui.rs  ui_data.rs
vst/src/editor/components/: param_int_knob.rs  param_knob.rs
vst/src/editor/ui/: style.css  ui_data.rs
vst/src/editor/ui/components/: param_int_knob.rs  param_knob.rs
vst/src/repeat_parameters/: formatters.rs  params.rs
vst/src/repeat_parameters/params/: float_param.rs  int_param.rs
vst/src/repeat_parameters/params/float_param/: float_range.rs
vst/src/repeat_parameters/params/int_param/: int_range.rs
(+60 files in other folders)
