[package]
name = "dm_repeat"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
vizia = { git = "https://github.com/robbert-vdh/vizia.git", branch = "patched", default_features = false, features = ["baseview", "clipboard", "x11"] }
repeat = { path = "../repeat" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "dm_repeat_gui"
path = "src/bin.rs"
